--- a/src/App.css
+++ b/src/App.css
@@ -19,8 +19,7 @@ a{
   text-decoration: none;
 }
 img{
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
   display: block;
 }
 ::-webkit-scrollbar {
